2002-11-06  Andrew Cagney  <ac131313@redhat.com>

	* infcmd.c: Include "reggroups.h" and <ctype.h>.
	(print_float_info): Print registers in float_reggroup.
	(print_vector_info): Print registers in vector_reggroup.
	(default_print_registers_info): When all, print registers in
	all_reggroup.  Otherwize, print registers in general_reggroup.
	(registers_info): Rewrite.  Add support for register groups.
	Eliminate a goto.

2002-11-06  Elena Zannoni  <ezannoni@redhat.com>

	* symtab.c (methods_info): Delete. It has been ifdeffed out for
	ages.
	(symtab_symbol_info): Remove eons old ifdeffed out code.
	(_initialize_symtab): Remove prehistoric disabled 'info methods'
	command.

2002-11-06  Theodore A. Roth  <troth@openavr.org>

	* c-exp.y: Add missing semi-colons.
	* f-exp.y: Add missing semi-colons.
	* m2-exp.y: Add missing semi-colons.
	* p-exp.y: Add missing semi-colons.
	Add empty action to start rule to avoid a type clash error when
	building with bison >= 1.50.

2002-11-06  Jim Blandy  <jimb@redhat.com>

	* macrotab.h (struct macro_source_file): Doc fix.

2002-11-05  Jeff Johnston  <jjohnstn@redhat.com>

	* varobj.c (child_exists, cplus_number_of_children): Change
	STREQ macro references to strcmp.
	(cplus_name_of_child): Change code to handle the fact that
	fields are not necessarily contiguous with regards to their 
	access control. This is a fix for PR gdb/792.

2002-11-05  Andrew Cagney  <ac131313@redhat.com>

	* gdbarch.sh (GET_SAVED_REGISTER): Change to a predicate function.
	* gdbarch.h, gdbarch.c: Regnerate.
	* frame.h (frame_register): Declare.
	* frame.c (frame_register): New function.
	(get_saved_register): Test GET_SAVED_REGISTER_P before calling
	GET_SAVED_REGISTER, otherwize call
	generic_unwind_get_saved_register.
	(frame_register_read): Use frame_register instead of
	get_saved_register.

2002-11-05  Elena Zannoni  <ezannoni@redhat.com>
	
        From Jim Ingham  <jingham@apple.com>:
	* event-top.c (gdb_disable_readline): New function.