@@ -1,3 +1,9 @@
+2002-11-06  Joel Brobecker  <brobecker@gnat.com>
+
+	* hppa-tdep.c (_initialize_hppa_tdep): Move function body
+	to end of file, to be more consistent with the pratice followed
+	by other targets.
+
 2002-11-06  Andrew Cagney  <ac131313@redhat.com>
 
 	* infcmd.c: Include "reggroups.h" and <ctype.h>.
